--- a/assets/css/one_page.css
+++ b/assets/css/one_page.css
@@ -185,8 +185,75 @@ body {
     padding-bottom: 50px;
     background-image: url(../images/one_page/process.jpeg);
     background-size: cover;
+    position: relative;
 }
 
 .p-2 .slogan {
     color: #fff;
+}
+
+.p-2::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.445);
+}
+
+.flow {
+    text-align: center;
+    position: relative;
+    z-index: 3;
+}
+
+.item-circle {
+    --r: 30px;
+    width: var(--r);
+    height: var(--r);
+    border-radius: var(--r);
+    background-color: red;
+    position: relative;
+    z-index: 2;
+}
+
+.flow-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-bottom: 4px;
+}
+
+.flow-item::after {
+    content: "";
+    width: 0;
+    position: absolute;
+    top: 0;
+    height: 100%;
+    border: 2px dashed #fff;
+}
+
+.item-content {
+    position: absolute;
+    left: calc(50% + 50px);
+    padding: 20px;
+    background: #0f7b83;
+    color: #ffff;
+    border-radius: 6px;
+    text-align: left;
+}
+
+.item-content h2 {
+    margin-bottom: 15px;
+}
+
+.flow-item:nth-child(even) .item-content {
+    left: unset;
+    right: calc(50% + 50px);
+    text-align: right;
+
 }
