--- a/assets/css/zz.css
+++ b/assets/css/zz.css
@@ -1,4 +1,4 @@
-.body {
+body {
     font-family: 'Noto Sans TC', sans-serif;
     font-size: 16px;
 }
@@ -6,6 +6,7 @@
 .header {
     padding-top: 10px;
     padding-bottom: 10px;
+    border-bottom: 2px solid #cecece;
 }
 
 .header-wrap {
@@ -19,7 +20,6 @@
     align-items: center;
     justify-content: space-between;
 }
-
 
 .link-button {
     display: flex;
@@ -39,4 +39,70 @@
 .link-button a:hover,
 .link-button li.active a {
     color: rgb(14, 60, 160);
+}
+
+.header .menu ul {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.header .left-side {
+    position: relative;
+    padding-right: 30px;
+    margin-right: 15px;
+}
+
+.header .left-side::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 15%;
+    height: 70%;
+    width: 2px;
+    background: #cecece;
+}
+
+.main {
+    height: 150vh;
+}
+
+.footer {
+    background: #fafafa;
+    border-top: 2px solid #cecece;
+}
+
+.footer .copyright {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    border-top: 2px solid #cecece;
+}
+
+.footer .copyright .copyright-icon {
+    margin-right: 5px;
+}
+
+.footer .top-side {
+    display: flex;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    gap: 60px;
+}
+
+.footer .menu {
+    display: flex;
+    gap: 60px;
+}
+
+.footer .menu .menu-title {
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+}
+
+.footer .menu-item {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
