--- a/assets/css/one_page.css
+++ b/assets/css/one_page.css
@@ -77,6 +77,8 @@ body {
 .p-1::before {
     content: "";
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.116);
@@ -202,10 +204,13 @@ body {
     background: rgba(0, 0, 0, 0.445);
 }
 
+
 .flow {
     text-align: center;
     position: relative;
     z-index: 3;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .item-circle {
@@ -242,7 +247,7 @@ body {
     left: calc(50% + 50px);
     padding: 20px;
     background: #0f7b83;
-    color: #ffff;
+    color: #fff;
     border-radius: 6px;
     text-align: left;
 }
