--- a/assets/css/animation.css
+++ b/assets/css/animation.css
@@ -92,6 +92,7 @@
     animation-duration: 1s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+    animation-fill-mode: both;
 }
 
 @keyframes runrunrun {
