--- a/assets/css/one_page_rwd.css
+++ b/assets/css/one_page_rwd.css
@@ -21,28 +21,14 @@
     background: rgb(235, 85, 27);
 }
 
-.mobile-menu-switch.active span {
-    background: rgb(235, 85, 27);
-}
-
-.mobile-menu-switch.active span:first-child {
-    transform: rotate(45deg) translate(2px, 5px);
-}
-
-.mobile-menu-switch.active span:nth-child(2) {
+#mobile-menu-trigger {
     display: none;
-}
-
-.mobile-menu-switch.active span:last-child {
-    transform: rotate(-45deg) translate(2px, -4px);
 }
 
 
 @media screen and (max-width: 768px) {
     .header-row {
         position: relative;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
     }
 
     .header-row .menu {
@@ -65,4 +51,69 @@
     .mobile-menu-switch {
         display: block;
     }
+
+    #mobile-menu-trigger:checked~.header-row {
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+    }
+
+    #mobile-menu-trigger:checked~.header-row .menu {
+        display: block;
+    }
+
+    #mobile-menu-trigger:checked~.header-row .mobile-menu-switch span {
+        background: rgb(235, 85, 27);
+    }
+
+    #mobile-menu-trigger:checked~.header-row .mobile-menu-switch span:first-child {
+        transform: rotate(45deg) translate(3px, 5px);
+    }
+
+    #mobile-menu-trigger:checked~.header-row .mobile-menu-switch span:nth-child(2) {
+        display: none;
+    }
+
+    #mobile-menu-trigger:checked~.header-row .mobile-menu-switch span:last-child {
+        transform: rotate(-45deg) translate(2px, -4px);
+    }
+
+    .p-1 .page-row {
+        flex-direction: column;
+    }
+
+    .p-1 .page-row>div {
+        width: 100%;
+    }
+
+    .p-1 .page-row .left-side::after {
+        top: unset;
+        right: unset;
+        bottom: 0;
+        left: 20px;
+        border-bottom: 3px dashed #fff;
+        height: 3px;
+        width: calc(100% - 40px);
+    }
+
+    .flow-item {
+        padding-bottom: 80px;
+        justify-content: flex-start;
+        padding-left: 20px;
+    }
+
+    .flow-item .item-content {
+        left: 60px;
+        margin-right: 15px;
+    }
+
+    .flow-item:nth-child(even) .item-content {
+        right: unset;
+        left: 60px;
+        text-align: left;
+    }
+
+    .item-circle {
+        transform: translateX(-12px);
+    }
+
 }
