--- a/zeczec/assets/css/main.css
+++ b/zeczec/assets/css/main.css
@@ -2,6 +2,7 @@
     --header-h: 70px;
     --header-bg: rgb(255, 255, 255);
     --header-border-color: #ececec;
+    --second-color: #a8a8a8;
 }
 
 html,
@@ -75,7 +76,7 @@ img {
 
 .product-information-wrap {
     display: flex;
-
+    align-items: center;
 }
 
 .product-information-video {
@@ -84,12 +85,14 @@ img {
 
 .product-information-text {
     flex: 1;
-    padding: 0 10px;
+    padding: 0 30px;
 }
 
 .category-nav {
     display: flex;
     gap: 20px;
+    color: var(--second-color);
+    font-size: 0.9rem;
 }
 
 .category-nav li {
@@ -132,6 +135,7 @@ img {
     border: 2px solid #09aa17;
     border-radius: 1000px;
     font-size: 0.9rem;
+    box-shadow: 0 0 1px 1px inset #ababab;
 }
 
 .project-goal {
@@ -162,4 +166,144 @@ img {
 
 .project-count-item>span:last-child {
     color: #09aa17;
+}
+
+.project-description {
+    font-size: 0.9rem;
+    line-height: 26px;
+    margin: 15px auto;
+    text-align: justify;
+}
+
+hr.line {
+    border-color: var(--header-border-color);
+}
+
+.project-run-range {
+    margin: 15px auto;
+    color: var(--second-color);
+    font-size: 0.8rem;
+}
+
+.share-item {
+    color: #666666;
+    font-size: 0.8rem;
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.send-message {
+    padding: 5px;
+    border: 1px solid var(--second-color);
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    border-radius: 2px;
+}
+
+.share-item .material-symbols-outlined {
+    font-size: 16px;
+}
+
+.share-item img {
+    max-width: 30px;
+}
+
+.copy-icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    border: 1px solid var(--second-color);
+    border-radius: 999px;
+}
+
+.main-nav-block {
+    background-color: #f9fafb;
+    height: 60px;
+}
+
+.main-nav-wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.main-nav-wrap .page-tab {
+    flex: 2;
+}
+
+.page-tab .tabs {
+    display: flex;
+    gap: 25px;
+}
+
+.page-tab .tabs li {
+    position: relative;
+}
+
+.page-tab .tabs li::after {
+    content: "";
+    position: absolute;
+    bottom: -7px;
+    left: -4px;
+    width: 0;
+    background: #4cc764;
+    height: 2px;
+    transition: 0.3s;
+}
+
+.page-tab .tabs li.active::after {
+    width: calc(100% + 8px);
+}
+
+
+.main-nav-wrap .donate-wrap {
+    flex: 1;
+}
+
+.donate-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.donate-wrap .like-btn {
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #43946c;
+    border-radius: 4px;
+    color: #43946c;
+    transition: 0.3s;
+}
+
+.donate-wrap .like-btn:hover {
+    border-color: #55b987;
+    color: #55b987;
+}
+
+.donate-wrap .like-btn .material-symbols-outlined {
+    color: inherit;
+}
+
+.donate-wrap .donate-btn {
+    flex: 1;
+    display: inline-flex;
+    width: 100%;
+    height: 40px;
+    align-items: center;
+    justify-content: center;
+    background: #43946c;
+    color: #fff;
+    border-radius: 4px;
+    transition: 0.3s;
+}
+
+.donate-wrap .donate-btn:hover {
+    background-color: #55b987;
 }
