--- a/assets/css/js_todolist.css
+++ b/assets/css/js_todolist.css
@@ -86,3 +86,9 @@
     align-items: center;
     justify-content: space-between;
 }
+
+#preview {
+    max-width: 100%;
+    margin-top: 20px;
+    border: 1px solid #000;
+}
